added content to /academics/christianly

--- a/app/views/site_pages/christianly.html.erb
+++ b/app/views/site_pages/christianly.html.erb
@@ -18,9 +18,102 @@
         </div>
 
         <div class="content">
+
           <p>
-            A whole lot of content goes here.
+            By design, the Rivendell 5 Pursuits Program aims at offering an innovative approach to Liberal Arts education
+            that is intentionally informed by Christian theism.  Rivendell assumes that Liberal Arts Education
+            begins with a peculiar orientation, i.e. Christian theism.
           </p>
+
+          <p>
+            Proverbs is clear that the beginning of both ‘wisdom’ and ‘knowledge’ is “the fear of the Lord”
+            (cf. Pr. 1:7; 9:10).  This is so, from the biblical perspective, because it’s assumed that a
+            right posture before (and ‘picture’ of) the Creator is essential to a right perception of his
+            creation.  As such, a pedagogy sharing that perspective will naturally manifest itself in its
+            approach to teaching the liberal arts:
+          </p>
+
+          <ol>
+
+            <li>
+              <strong>It will begin with God instead of seeking to evade Him.</strong> This counters modern, secular approaches
+              to education that begin with some form of philosophical and/or methodological naturalism.
+              Granted, these approaches can and have yielded valuable descriptive insights into creation.
+              But they struggle to find a unifying center around which all such discoveries might rotate.
+            </li>
+
+            <li>
+              <strong>It will begin with God instead of seeking to end with Him.</strong> This counters medieval, scholastic
+              approaches to education that ‘end’ with God, making the liberal arts ‘servile’ tools for the
+              theologian’s occupation.  Granted, these approaches can be helpful and need not be completely
+              abandoned.  But, in principle, they seem to represent a conflating of ‘liberal’ and ‘servile’
+              arts and a reversal of the pedagogical approach found in Proverbs.
+            </li>
+
+            <li>
+              <strong>It will begin with God in a way that avoids erring about Him.</strong> This calls the educator to a
+              Trinitarian theism as the starting point for his/her pedagogy.  Granted, this approach
+              ‘prejudices’ the view of the liberal arts from the outset.  But the task of a liberal arts
+              education, as a liberal arts education, is to rightly understand the liberal arts themselves,
+              which itself requires seeing these branches of creational investigation in the context of their
+              Trinitarian Creator.
+
+              <ol>
+
+                <li>
+                  Who, as One-in-Three, grounds the Unity of the arts
+
+                  <ul>
+
+                    <li>Both externally, i.e., as the Originator of them all</li>
+                    <li>And internally, i.e., as the Orderer of each one</li>
+
+                  </ul>
+
+                </li>
+
+                <li>
+                  Who, as Three-in-One, grounds the Diversity of the arts
+
+                  <ul>
+
+                    <li>Both externally, i.e., as the Conceiver of them all</li>
+                    <li>And internally, i.e., as the Composer of each one</li>
+
+                  </ul>
+
+                </li>
+
+                <li>
+                  Who, as Loving One, grounds the Relationality of the arts
+
+                  <ul>
+
+                    <li>Both externally, i.e., as the Sustainer of them all</li>
+
+                    <li>And internally, i.e., as the Shaper of each one</li>
+
+                  </ul>
+
+                </li>
+
+              </ol>
+
+            </li>
+
+          </ol>
+
+          <p>
+            The key here is to see that the liberal arts, taken either corporately or separately,
+            reflect both the unity, plurality and relationality of their Creator.
+          </p>
+
+          <p>
+            Why does this matter? – Simply because a liberal arts curriculum that fails to start with this
+            ‘peculiar orientation’ will, to some degree, skew students’ understanding of those arts with
+            regard to their nature, substance, value, use, relations and/or origin.
+          </p>
+
         </div>
 
         <div class="other-posts">
