added communally and sequential detail pages.

--- a/app/views/site_pages/communally.html.erb
+++ b/app/views/site_pages/communally.html.erb
@@ -18,9 +18,56 @@
         </div>
 
         <div class="content">
+
           <p>
-            A whole lot of content goes here.
+            For those of us raised within the extreme individualism of Western Civilization, “authentic
+            community” is a difficult concept to grasp.  Rivendell is truly unique when it comes to
+            understanding and experiencing the power of a Christian community.
           </p>
+
+          <p>
+            Rivendell introduces IN-COMM education, where learning takes place withIN-COMMunity.  Fifteen to
+            thirty students, two faculty and one mentor embark on an educational journey together, remaining
+            a unit for the duration of the program.  In other words, students never change classes, classmates
+            or professors.
+          </p>
+
+          <p>
+            Patterned after Jesus’ discipleship model,’ Rivendell’s cohort education encourages a more
+            dynamic, collaborative, and supportive learning environment.
+          </p>
+
+          <p>
+            Not limited to one-hour, three days a week class segments, faculty are provided the opportunity to have:
+
+            <ol>
+
+              <li>The concentrated and sustained time to impact a life.</li>
+              <li>The platform to merge conceptual knowledge and application.</li>
+              <li> The opportunity to observe how students live in relation to what they learn.</li>
+              <li>The opportunity to model truth.</li>
+
+            </ol>
+
+          </p>
+
+          <p>
+            In addition to academic benefits, cohort education brings the opportunity to practice the second
+            part of the Great Commandment to “love your neighbor.”  How?  Sectarian groups dividing the
+            in-crowd and the out-crowd; rich and poor; cool and un-cool; athletes and artists; black and
+            white; etc. are challenged.  All learn to participate as one unit.  Students learn to share,
+            depend, trust, and most importantly love one another based on intrinsic value (who they are)
+            rather than extrinsic value (what they look like).
+          </p>
+
+          <p>
+            <em>
+              Please note that while students have the opportunity to experience their own intimate community
+              of 15-30 classmates, they also live on a traditional college campus giving them access to many
+              other students.
+            </em>
+          </p>
+
         </div>
 
         <div class="other-posts">
