--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -18,9 +18,99 @@
         </div>
 
         <div class="content">
+
           <p>
-            A whole lot of content goes here.
+            For a true College Core program to succeed it must be tied to a Great Story that supplies both
+            young and old the reason to learn. Our Story is God’s Story.
           </p>
+
+          <p>
+            At one time, God supplied education with a Grand Story, a comprehensive worldview explaining
+            all of life. This context gave meaning to all its individual parts. As a result, students
+            received a full education. They understood the Big Picture and how each subject – Theology,
+            Philosophy, History, Science, Mathematics, Psychology, Art, Government, Law, Economics, etc.
+            – fit into the greater whole.
+          </p>
+
+          <p>
+            When God’s Story was removed, the liberal arts and sciences degenerated into a meaningless,
+            hodgepodge of isolated subjects notoriously referred to as the General Education Requirements
+            or rather Gen Eds.
+
+            <%= holder_tag('789x150', 'photo for craziness', {}, class:'img-responsive') %>
+          </p>
+
+          <p>
+            Understood to be the core of education by America’s Founders, these academic disciplines have
+            become a waste of time and money, a necessary evil students must endure to reach their vocational
+            studies. Without God’s Transcendent Story, their analysis is correct.
+          </p>
+
+          <p>
+            This problem is easily remedied. By injecting God’s Story back into the College Core,
+            what was once a meaningless, hodgepodge of isolated subjects becomes
+            a meaningful, orderly and coherent whole. And once more, students have a reason to learn.
+
+            <%= holder_tag('789x150', 'photo for sequentially', {}, class:'img-responsive') %>
+          </p>
+
+          <p>
+            Rivendell introduces sequenced-modular education, where the College Core is studied one subject
+            at a time in a sequence that follows the flow of the biblical narrative. Rivendell’s academic
+            semesters, illustrated below, are listed in the order students study them.
+
+            <%= holder_tag('789x150', 'photo for sequenced, modular curriculum', {}, class:'img-responsive') %>
+          </p>
+
+          <p>
+            Each individual course (module) is five weeks long.  Students amass 64 credit hours of academic
+            studies over the course of 16 months, thus meeting the general education requirements for many
+            universities and colleges.
+          </p>
+
+          <p>
+            This sequential curriculum has been shown to boost academic performance, generate desire for
+            life-long learning, and increase graduation rates. Why? First, students receive a more organic
+            education as all subjects are woven into a beautiful tapestry reflecting a unity of knowledge
+            rather than isolated and fragmented systems of knowledge.
+          </p>
+
+          <p>
+            Second, a sequenced modular system enhances student learning by providing intensive and focused
+            time on each subject. Time and attention is never divided between five or six subjects at once.
+            During a typical semester in the conventional system, students attend multiple lectures, read
+            multiple books, write multiple essays, and study for multiple exams for courses that are seemingly
+            unrelated to one another. Often, college is more about endurance and survival than learning.
+          </p>
+
+          <p>
+            <strong>Important note:</strong><br />
+            Rivendell holds that history, composition, and speech are to be an integral part of every
+            academic module and thus not taught separately (compartmentalized). For example, when approaching
+            History, we call upon the wisdom of Neil Postman who believes history should be the focal point
+            when studying each discipline. He writes,
+          </p>
+
+          <blockquote>
+            <p>
+              “History is not merely one subject among many that may be taught; every subject has a history,
+              including biology, physics, mathematics, literature, music, and art…To teach, for example,
+              what we know about biology today without also teaching what we once knew, or thought we knew,
+              is to reduce knowledge to a mere consumer product. It is to deprive students of a sense of the
+              meaning of what we know, and of how we know. To teach about the atom without Democritus, to
+              teach about electricity without Faraday, to teach about political science without Aristotle or
+              Machiavelli, to teach about music without Haydn, is to refuse our student’s access to “The
+              Great Conversation”. It is to deny them knowledge of their roots, about which no other social
+              institution is at present concerned.”
+            </p>
+          </blockquote>
+
+          <p>
+            We maintain the same principle regarding composition and speech. In the beginning, students
+            are schooled in critically reading, writing and speech and hone these skills in every academic
+            discipline thereafter.
+          </p>
+
         </div>
 
         <div class="other-posts">
