--- a/app/views/site_pages/classically.html.erb
+++ b/app/views/site_pages/classically.html.erb
@@ -18,9 +18,52 @@
         </div>
 
         <div class="content">
+
           <p>
-            A whole lot of content goes here.
+            To become the best students possible they must study the best works available. Rivendell utilizes
+            a contemporary and historical “Great Books” curriculum rather than the standard textbook-based
+            curriculum. While textbooks come and go, the “Great Books” are the literary, scientific, political
+            and social classics that have stood the test of time and are proven to have had the greatest
+            impact on civilization, our understanding of human nature and the meaning of life. For example,
+            while studying political science, students may read such books as The Republic (Plato), The
+            Prince (Machiavelli), and The Federalist Papers (Hamilton, Madison, and Jay) among other great works.
+            When studying Economics, students may dive into such classic authors as Adam Smith (The Wealth of
+            Nations), David Ricardo (Principles of Political Economy and Taxation) or John Stuart Mill (On Liberty).
           </p>
+
+          <p>
+            Studying via a Great Books curriculum, students have access to the greatest minds who ever
+            lived and are able to glean the thoughts and information directly from their original,
+            authoritative works.  Textbooks, on the other hand, are more or less thoughts about thoughts.
+            They are secondary sources of ideas filtered, interpreted and repackaged by later scholars.
+            When this happens, content becomes diluted. With direct access to the great thinkers, students
+            consider the original ideas on their own merits.
+          </p>
+
+          <p>
+            Another reason we find a “Great Books” curriculum superior to a “textbook-based” curriculum is
+            their ability to push students upwards, reaching new heights intellectually. Why?
+          </p>
+
+          <p>
+            Because “Original Sources” cannot be reduced due to the fact that they are “The Original Content.”
+            They are already reduced to its “lowest common denominator.”  Consequently, a “Great Books” curriculum
+            forces students upwards rather than downwards, pushing them to raise their standards and level of
+            competency.
+          </p>
+
+          <p>
+            However, what makes Rivendell’s “Great Books” curriculum truly exceptional is the amount of
+            time and emphasis placed on studying “The Greatest Book,” The Holy Scriptures. The Bible is
+            the blueprint for reality and the ultimate authoritative source. It has been the single most
+            influential book in the formation of Western Civilization and the basis for remaining a free and
+            civil society.  A biblical foundation is essential when studying any literary text. Just because
+            a book is considered a “Classic” does not mean its message and content are beneficial, wise or
+            infallible. Without an objective standard to judge a book, all conflicting arguments and messages
+            are considered equal and consequently rendered meaningless. Our comprehensive study of the Bible
+            provides students the criteria to judge the content of ALL literary texts.
+          </p>
+
         </div>
 
         <div class="other-posts">
