--- a/app/views/site_pages/critically.html.erb
+++ b/app/views/site_pages/critically.html.erb
@@ -19,8 +19,67 @@
 
         <div class="content">
           <p>
-            A whole lot of content goes here.
+            We have heard the old adage, “Give a man a fish and he will eat for a day. Teach a man how to
+            fish and he will eat for a lifetime.” Dorothy Sayers, in her profound essay titled The Lost
+            Tools of Learning, applies the same principle to education when she writes,
           </p>
+
+          <blockquote>
+            <p>
+              “Is not the great defect of our education today… that although we often succeed in teaching
+              pupils ‘subjects,’ we fail lamentably on the whole in teaching them how to think: they learn
+              everything, except the art of learning.”
+            </p>
+          </blockquote>
+
+          <p>She goes on to write,</p>
+
+          <blockquote>
+            <p>
+              “The sole true end of education is simply this—to teach men how to learn for themselves; and
+              whatever instruction fails to do this is effort spent in vain.”
+            </p>
+          </blockquote>
+
+          <p>
+            Rivendell’s academic program is structured around this principle—teaching students “how to learn”
+            in order that they may become life-long students.
+          </p>
+
+          <p>
+            Rivendell’s entire academic program is structured around this principle – teaching students “how
+            to learn” in order that they may become life-long students.  Spoon-feeding information is
+            minimized. We believe learning is essentially an activity that the students do within themselves
+            and that they are the primary agents in their education.  Therefore, in the beginning students
+            participate in an extensive critical thinking seminar. They are schooled in reasoning, analysis
+            and criticism by means of reading, writing and verbal communication.  Once these foundations are
+            laid, the remainder of the program sharpens these skills as students apply the method every day,
+            to every subject and every assignment.  Students, therefore, think their way through subjects and
+            wrestle through ideas for themselves.  We aim to develop a fitness of mind, master thinkers,
+            self-learners – men and women who can routinely:
+
+            <ul>
+
+              <li>Identify arguments, themes or points of view</li>
+              <li>Clarify questions to be answered and the problems to be solved</li>
+              <li>Distinguish main ideas from subordinate ideas</li>
+              <li>Identify assumptions</li>
+              <li>Consider implications and consequences</li>
+              <li>Examine ideas from multiple vantage points</li>
+              <li>Test for accuracy</li>
+              <li>Express ideas clearly, precisely and logically</li>
+              <li>Examine biases and prejudices</li>
+              <li>Evaluate according to biblical standards</li>
+
+            </ul>
+
+          </p>
+
+          <p>
+            The Rivendell Critical Thinking Method exhorts freshman to perform graduate level work.  We start
+            slowly and proceed to increasingly difficult texts.
+          </p>
+
         </div>
 
         <div class="other-posts">
