--- a/app/views/site_pages/globally.html.erb
+++ b/app/views/site_pages/globally.html.erb
@@ -18,9 +18,47 @@
         </div>
 
         <div class="content">
+
+          <blockquote>
+            <p>
+              “Travel is fatal to prejudice, bigotry and narrow mindedness, and many of our people need it sorely on these accounts.”
+            </p>
+            <footer>Mark Twain</footer>
+          </blockquote>
+
           <p>
-            A whole lot of content goes here.
+            Nothing broadens your perspective on life and challenges your worldview like traveling abroad.
+            Open your eyes to the richness, beauty and traditions of other cultures and magically return home
+            with a greater appreciation for your own.
           </p>
+
+          <p>
+            Rivendell provides the opportunity to break out of your shell, embrace new cultures, expand your
+            palette and yes, even enlarge your resume as companies look for overseas experience.
+          </p>
+
+          <p>
+            Travel with purpose as we connect the Fine Arts module with five weeks in Italy, specifically Rome,
+            Florence, Venice, and Assisi — the mecca of the High Renaissance period. Experience the genius of
+            the Sistine Chapel, the Statue of David, and Raphael’s ‘The School of Athens’ Fresno in person.
+          </p>
+
+          <p>
+            Your studies in Italy provide a theoretical and practical overview of the history, philosophy
+            and most significant productions that shaped Western art.  Along the way you will:
+
+            <ul>
+
+              <li>Develop a connoisseur’s eye for beauty by unearthing the theistic undertones and contextual significance of art.</li>
+              <li>Discuss the social significance and moral implications of artwork. </li>
+              <li>Interpret the story the artist wished to portray and analyze their narrative with the critical thinking skills learned back in the states.</li>
+              <li>Acquire skills to commentate by developing a sensitivity to aesthetic methodologies, styles, and functions present in pieces put before you.</li>
+              <li>Gaze wondrously at a single piece for hours as you study and evaluate it’s message and composition.</li>
+
+            </ul>
+
+          </p>
+
         </div>
 
         <div class="other-posts">
