--- a/app/views/site_pages/socratically.html.erb
+++ b/app/views/site_pages/socratically.html.erb
@@ -18,9 +18,72 @@
         </div>
 
         <div class="content">
+
           <p>
-            A whole lot of content goes here.
+            Rivendell believes students are to be active learners, not passive recipients of information.
+            Therefore, we take an unconventional approach regarding the classroom.  Traditionally, the
+            classroom is reserved for lectures.  In the Rivendell Program, lectures take place outside the
+            classroom in the form of assigned readings.  Students learn to read texts (primarily the Great
+            Books) as a lecture given by one of the history’s most brilliant minds.  Therefore, when coming
+            to class having read an assigned text, students have in essence already participated in lecture.
+            This liberates the classroom to be a place for discussion.
           </p>
+
+          <p>
+            Students participate in a variety of forms of discussion, led by faculty who teach by means of
+            asking questions in relation to assigned readings.  This style, known as Socratic Dialogue, is
+            one of the oldest and most powerful teaching tactics used for fostering critical thinking.
+            Socratic classes are conversational and often spirited as both students and faculty come together
+            to grapple over the issues of life.  We are a meeting of the minds, where student input is just
+            as important as the professor’s.  Faculty are instructed not to spoon-feed information, nor freely
+            hand out answers and conclusions.  Students arrive at conclusions through probing questions posed
+            by faculty and peers.  Jeff Baldwin, in his article entitled <em>Iron Sharpens Iron: Why the Socratic
+            Method Matters So Much</em> writes,
+          </p>
+
+          <blockquote>
+            <p>
+              “As long as faculty freely volunteer answers when the going gets tough, students will learn
+              that they don’t really need to buckle down. But if they find that you really do expect them
+              to self-learn, then they will gradually face up to the fact that they must roll up their sleeves
+              and think hard. When this happens, it becomes the turning point in their education! Students
+              need to own their faith, and they can’t do that as long as someone else rushes in to help them
+              apply that faith.”
+            </p>
+          </blockquote>
+
+          <p>
+            This classical style of teaching proves to increase long-term understanding for a couple of
+            reasons.  First, it forces students to interact with the information at a deeper level.  One
+            cannot claim to know or retain information unless they can explain it to others in their own
+            words.  Translating information into one’s own words forces a person to connect the dots and
+            build conceptual bridges.  In short, it “hooks” information into a person’s long-term memory bank.
+          </p>
+
+          <p>
+            Second, a Socratic format requires mental engagement in and out of the classroom.  Students,
+            expecting to be challenged in class, take a more focused and active approach in their studies.
+            Poor arguments, as a result of shoddy reasoning, will be contested.  In other words, students
+            must come to class prepared or risk being exposed.  This level of accountability demands that
+            students take ownership of their education and become active self-learners.
+          </p>
+
+          <p>
+            What makes Rivendell's Socratic style of teaching exceptional is its firm foundation in God’s Holy Scriptures.
+            Jeff Baldwin again in his essay writes,
+          </p>
+
+          <blockquote>
+            <p>
+              “People may have opinions about various issues, but if discussion is nothing more than an
+              airing of opinions, there is not good reason for any person to change his/her mind.  The only
+              hope for fruitful discussion rests squarely on the fact that there is a fixed standard for
+              which to judge opinions.  Students from time to time will take unbiblical positions and must
+              be given the freedom to do so, but in the end, all such stances shall be measured according to
+              God’s eternal standards.”
+            </p>
+          </blockquote>
+
         </div>
 
         <div class="other-posts">
