--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -2,8 +2,8 @@
 
   <div class="col-sm-6 menu">
     <ul>
+      <%= content_tag :li, link_to('About', about_path) %>
       <%= content_tag :li, link_to('Academics', academics_path) %>
-      <%= content_tag :li, link_to('Student Life', student_life_path) %>
       <%= content_tag :li, link_to('Admissions', admissions_path) %>
       <%= content_tag :li, link_to('Contact', new_contact_path) %>
     </ul>
