finished academics section.  all specs pass.

--- a/app/views/site_pages/holistically.html.erb
+++ b/app/views/site_pages/holistically.html.erb
@@ -118,6 +118,18 @@
                 <%= render 'life_skills' %>
               </div>
 
+              <div id="community-service" class="tab-pane fade">
+                <%= render 'community_service' %>
+              </div>
+
+              <div id="holy-healthy-living" class="tab-pane fade">
+                <%= render 'holy_healthy_living' %>
+              </div>
+
+              <div id="spiritual-formation" class="tab-pane fade">
+                <%= render 'spiritual_formation' %>
+              </div>
+
             </div>
 
           </div>
