--- a/app/views/site_pages/_life_skills.erb
+++ b/app/views/site_pages/_life_skills.erb
@@ -9,3 +9,26 @@
   </p>
 </blockquote>
 
+<p>
+  The collapse of the family, the loss of a moral code and the media’s constant promotion of bad behavior
+  have lowered traditional standards of manners, etiquette and respect to an all time low. Rivendell aims
+  to restore the lost art of manners, etiquette, respect and other nuances of civility.  Our desire is to
+  see future spouses, parents and citizens counter this trend.
+</p>
+
+<p>
+  As part of our program, students are schooled in the following areas:
+
+  <ul>
+
+    <li>Proper protocol concerning greetings and salutations</li>
+    <li>Eye contact</li>
+    <li>Nonverbal communication</li>
+    <li>Courtesy and respect for others, including peers, opposite sex, elderly and authority figures</li>
+    <li>Formal dining etiquette</li>
+    <li>People skills</li>
+
+  </ul>
+
+</p>
+
