added image acacemics/sequential

--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('blogpost5.png', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :div, image_tag('sequential.jpg', class:'img-responsive'), class:'main-pic' %>
       </div>
     </div>
 
