--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -40,7 +40,7 @@
 
           <div id="sequentially" class="tab-pane fade">     <!-- SEQUENTIALLY -->
             <div class="col-md-6 image">
-              <%= holder_tag '359x222', 'sequentially image (359x322)', {}, class:'img-responsive' %>
+              <%= image_tag 'sequential.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
             <div class="col-md-6 info">
               <h4>Progress through the college core <strong><i>sequentially</i></strong></h4>
@@ -156,8 +156,11 @@
       </div>
     </div>
 
+    <%= tag :hr %>
+
   </div>
 </div>
+
 
 <div id="second-option">
   <div class="container">
