grammar changes as suggested by Jack.

--- a/app/views/site_pages/globally.html.erb
+++ b/app/views/site_pages/globally.html.erb
@@ -49,9 +49,9 @@
 
             <ul>
 
-              <li>Develop a connoisseur’s eye for beauty by unearthing the theistic undertones and contextual significance of art.</li>
+              <li>Develop a connoisseur’s eye for beauty by unearthing the contextual significance and theistic undertones of art.</li>
               <li>Discuss the social significance and moral implications of artwork. </li>
-              <li>Interpret the story the artist wished to portray and analyze their narrative with the critical thinking skills learned back in the states.</li>
+              <li>Interpret the story portrayed by the artist and analyze their narrative with the critical thinking skills learned back in the states.</li>
               <li>Acquire skills to commentate by developing a sensitivity to aesthetic methodologies, styles, and functions present in pieces put before you.</li>
               <li>Gaze wondrously at a single piece for hours as you study and evaluate it’s message and composition.</li>
 
