--- a/app/views/site_pages/socratically.html.erb
+++ b/app/views/site_pages/socratically.html.erb
@@ -24,7 +24,7 @@
             Therefore, we take an unconventional approach regarding the classroom.  Traditionally, the
             classroom is reserved for lectures.  In the Rivendell Program, lectures take place outside the
             classroom in the form of assigned readings.  Students learn to read texts (primarily the Great
-            Books) as a lecture given by one of the history’s most brilliant minds.  Therefore, when coming
+            Books) as a lecture, given by one of the history’s most brilliant minds.  Therefore, when coming
             to class having read an assigned text, students have in essence already participated in lecture.
             This liberates the classroom to be a place for discussion.
           </p>
